--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "keywords": [
     "react-native",
+    "web-workers",
+    "asynchronous",
     "ios",
     "android"
   ],
@@ -54,7 +56,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
-    "@evilmartians/lefthook": "^1.5.0",
+    "@evilmartians/lefthook": "^1.6.11",
     "@react-native/eslint-config": "^0.73.1",
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^29.5.5",
@@ -70,7 +72,7 @@
     "react-native": "0.74.1",
     "react-native-builder-bob": "^0.23.2",
     "release-it": "^15.0.0",
-    "turbo": "^1.10.7",
+    "turbo": "^1.13.3",
     "typescript": "^5.4.5"
   },
   "resolutions": {
